UI changes in header/hero-section and in terminal

--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "19.1.0",
+    "react-simple-typewriter": "^5.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
