--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "19.1.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-textfit": "^1.1.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
